Revert "Fix alignment issues on certificate"
This reverts commit 8b79db0782ef0420fd4c8ebd4890bca64d16d8bb.

--- a/src/index.css
+++ b/src/index.css
@@ -130,10 +130,10 @@ form input[type="submit"]:hover {
   justify-content: center;
   align-items: center;
 
-  max-width: 100%;
+  max-width: 90%;
   width: 612px;
   height: 612px;
-  margin: 0px;
+  margin: 0 25px;
   border: 3px solid var(--clr-blue);
   border-radius: 4px;
 
@@ -141,8 +141,8 @@ form input[type="submit"]:hover {
 }
 
 .image img {
-  width: 100%;
-  height: 100%;
+  width: 512px;
+  height: 512px;
   border-radius: 6px;
 }
 
